tests/int/use_command/snapshots/integration__int__use_command__nesting__modules_nesting__level1__level2__level3_nesting_r_e.snap
---
source: tests/int/use_command/nesting.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/fixtures/modules
    - use
    - "nesting::level1::level2::level3"
    - "-r"
    - "-e"
---
success: true
exit_code: 0
----- stdout -----
crate::nesting::depth
crate::nesting::level1::depth
crate::nesting::level1::level2::depth

----- stderr -----
