tests/int/use_command/snapshots/integration__int__use_command__nesting__modules_nesting__level1__level2__level3_nesting_r_e_format_grouped.snap
---
source: tests/int/use_command/nesting.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - "nesting::level1::level2::level3"
    - "-r"
    - "-e"
    - "--format"
    - grouped
---
success: true
exit_code: 0
----- stdout -----
nesting::level1::level2::level3
 - crate::nesting::depth
 - crate::nesting::level1::depth
 - crate::nesting::level1::level2::depth

----- stderr -----
